# odra-casper

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: odra-casper-ci.yml  odra-casper-publish.yml
backend/: CHANGELOG.md  Cargo.toml
backend/src/: backend.rs  casper_env.rs  codegen.rs  lib.rs
backend/src/backend/: casper_env.rs
backend/src/codegen/: arg.rs  call.rs  constructor.rs  entrypoint.rs  entrypoints.rs  entrypoints_def.rs  parser.rs  ty.rs  wasm_entrypoint.rs
codegen/: Cargo.toml
codegen/src/: arg.rs  constructor.rs  entrypoints_def.rs  lib.rs  ty.rs  wasm_entrypoint.rs
common/: Cargo.toml
common/src/: address.rs  casper_address.rs  lib.rs  odra_address_wrapper.rs
shared/: CHANGELOG.md  Cargo.toml
shared/src/: casper_address.rs  consts.rs  lib.rs
test_env/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  getter_proxy.wasm
test_env/getter_proxy/: Cargo.toml
test_env/src/: env.rs  lib.rs  utils.rs
