[package]
name = "odra-casper-backend"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra-casper"
description = "Odra backend bindings and codegen utility for the Casper Blockchain."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = [ "spin_no_std" ] }
spin = "0.9.4"
# odra-casper-shared = { version = "0.1.0", path = "../shared" }
# odra = { version = "0.1.0", default-features = false, features = [ "wasm" ] }
odra-casper-shared = { path = "../shared" }
odra = { path = "../../odra/core", default-features = false, features = [ "wasm" ] }