[package]
name = "odra-casper-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.96"
convert_case = "0.5.0"
pretty_assertions = "1.2.1"
odra = { path = "../../odra/core" }
