[package]
name = "odra-casper-codegen"
version = "0.2.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra-casper"
description = "Odra codegen utility for the Casper Blockchain."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.96"
convert_case = "0.5.0"
pretty_assertions = "1.2.1"
odra = { version = "0.2.0", default-features = false, features = [ "wasm-test", "std" ] }

[patch.crates-io]
odra = { git = "https://github.com/odradev/odra", branch = "feature/no_std" }
