[package]
name = "casper-commons"
version = "0.1.0"
edition = "2021"

[dependencies]
odra-types = { git = "https://github.com/odradev/odra.git", branch = "feature/fixes" }
casper-types = "1.5.0"

# odra = { git = "https://github.com/odradev/odra.git", branch = "feature/fixes" }
# odra-types = { path = "../../../odra/types" }
# odra = { path = "../../../odra/core", default-features = false }
