[package]
name = "casper-commons"
version = "0.1.0"
edition = "2021"

[dependencies]
# odra-types = { path = "../../../odra/types" }
# odra = { path = "../../../odra/core", default-features = false }
casper-types = "1.5.0"
odra-types = { git = "https://github.com/odradev/odra.git" }
odra = { git = "https://github.com/odradev/odra.git" }

[features]
wasm = [ "odra/wasm" ]
wasm-test = [ "odra/wasm-test" ]