[package]
name = "odra-casper-test-env"
version = "0.2.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra-casper"
description = "Odra test environment for the Casper Blockchain."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]

[dependencies]
casper-engine-test-support = { version = "2.0.3", features = ["test-support"] }
casper-execution-engine = { version = "2.0.0" }
casper-types = "1.5.0"
odra-casper-shared = { version = "0.2.0" }
odra = { version = "0.2.0", default-features = false, features = [ "wasm-test" ] }

[patch.crates-io]
odra = { git = "https://github.com/odradev/odra", branch = "feature/no_std" }
odra-casper-shared = { git = "https://github.com/odradev/odra-casper", branch = "feature/no_std" }

[lib]
crate-type = ["cdylib"]
name = "odra_test_env"
